force-app/main/default/objects/Clients__c.object
<CustomObject>
    <fields>
        <fullName>Clients_EmailID__c</fullName>
        <label>Client Email Id</label>
        <type>Email</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>