force-app/main/default/objects/Clients__c/fields/AP_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>AP_Client_Id__c</fullName>
    <label>AP Client Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>