force-app/main/default/objects/Clients__c/fields/API_User_Password__c.field-meta.xml
<CustomField>
    <fullName>API_User_Password__c</fullName>
    <inlineHelpText>Please concatenate Security Token with Password (password+securitytoken)</inlineHelpText>
    <label>API User Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>