force-app/main/default/objects/Clients__c/fields/Contact_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Id__c</fullName>
    <label>Contact Email Id</label>
    <type>Email</type>
</CustomField>