force-app/main/default/objects/Clients__c/fields/Instruction_Plan__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Plan__c</fullName>
    <label>Instruction Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Renewal</fullName>
            </value>
            <value>
                <fullName>Instruction Only</fullName>
            </value>
            <value>
                <fullName>Non-MaxVal Renewal Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>