force-app/main/default/objects/Clients__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Invoice</fullName>
                <default>true</default>
                <label>Regular Invoice</label>
            </value>
            <value>
                <fullName>BU Wise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>