force-app/main/default/objects/Clients__c/fields/Is_LEDES_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_LEDES_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is LEDES Required</label>
    <type>Checkbox</type>
</CustomField>