force-app/main/default/objects/Clients__c/fields/Late_Fee_Message__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Message__c</fullName>
    <formula>&apos;The late fee for this client is &apos; +  TEXT(Billing_Currency__c) + &apos; &apos; +  Text( Late_fee_per_asset__c) + &apos; per asset, with a &apos; + TEXT(Billing_Currency__c) + &apos; &apos; +  TEXT( Late_Fee_Minimum__c ) + &apos; minimum per order and &apos; + TEXT(Billing_Currency__c) + &apos; &apos; + TEXT( Late_Fee_Maximum__c)  + &apos; maximum per order.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee Message</label>
    <type>Text</type>
</CustomField>