force-app/main/default/objects/Clients__c/fields/Late_fee_per_asset__c.field-meta.xml
<CustomField>
    <fullName>Late_fee_per_asset__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Late Fee per Asset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>