force-app/main/default/objects/Clients__c/fields/Law_Firm_Matter_ID__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Matter_ID__c</fullName>
    <label>Law Firm Matter ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>