force-app/main/default/objects/Clients__c/fields/Line_Item_Expense_Code__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Expense_Code__c</fullName>
    <label>Line Item Expense Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>