force-app/main/default/objects/Clients__c/fields/QB_Customer__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Customer</label>
    <referenceTo>QB_Customer__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>