force-app/main/default/objects/Clients__c/fields/RenewalReminderPolicy__c.field-meta.xml
<CustomField>
    <fullName>RenewalReminderPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Reminder Policy</label>
    <referenceTo>RenewalReminderPolicy__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>