force-app/main/default/objects/Clients__c/fields/Rush_Fee_Message__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_Message__c</fullName>
    <formula>&apos;The rush fee for this client is &apos; + TEXT( Billing_Currency__c )+ &apos; &apos; + TEXT( Rush_Fee_per_Order__c  )+ &apos;  per asset.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rush Fee Message</label>
    <type>Text</type>
</CustomField>