force-app/main/default/objects/Clients__c/fields/Rush_Fee_per_Order__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_per_Order__c</fullName>
    <label>Rush Fee per Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>