force-app/main/default/objects/Clients__c/fields/RushFee_Days__c.field-meta.xml
<CustomField>
    <fullName>RushFee_Days__c</fullName>
    <label>Rush Fee Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>