force-app/main/default/objects/Clients__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Client_Type__c</columns>
    <columns>Instruction_Plan__c</columns>
    <columns>Contact_Email_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>